--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 export DB="user=postgres password=root dbname=postgres port=5432 sslmode=disable"
 export SECRET="PASSWORD"
+export SERVER_TOKEN="0bcfcab9-e681-4dde-aa9a-a7482fa297b5"
+export ACCOUNT_TOKEN="384df086-9d59-4016-8583-e86768236355"
